<resources>
    <string name="app_name">Ineuron Car-Service</string>
    <string name="title_activity_nearby_service_center_geo">NearbyServiceCenterGeoActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Not registered yet? <u>Create an account</u></string>
    <string name="login_account">Already have an account? <u>Login here</u></string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Come join usStart your coding journey with the experts.</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type the Password</string>
    <string name="your_name">Full Name</string>
    <string name="phone_no">Phone Number</string>
    <string name="latitude">Enter Latitude</string>
    <string name="longitude">Enter Longitude</string>
    <string name="service_centre">Service Centre Admin</string>
    <string name="login_here"><u>Login here</u></string>
    <string name="admin_signup"> <u>Admin Signup</u></string>


</resources>